--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Fiction'
+- GITenberg
 title: Le tre valli della Sicilia
 url: http://www.gutenberg.org/ebooks/22506
